Make sure figures never get too wide

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -314,6 +314,7 @@ h4:hover a.bookmark {
 }
 figure {
   margin: 0 0 1em;
+  max-width: 100%;
   padding: 0;
   text-align: center;
 }
